# Advanced-AI

./: .gitignore  mkdocs.yml  pyproject.toml
PP2: Vision/: VLM_solution.ipynb
PP4:Tokenizer/: tokenizers.ipynb
PP7: VLM warmup/: download.py  generate.py  train.py
PP7: VLM warmup/data/: collators.py  datasets.py  processors.py
PP7: VLM warmup/models/: config.py  modality_projector.py  modality_projector_incomplete.py  utils.py  vision_language.py  vision_language_model_incomplete.py
docs/javascripts/: mermaid-init.js
docs/practicals/: pp3-clip.md  pp4-tokenizer.md  pp5-pretraining.md  pp6-ssl.md  pp7-vlm-warmup.md
