[project]
name = "aai-project"
version = "0.1.0"
requires-python = ">=3.10,<3.11"

[dependency-groups]
student = { optional = true, dependencies = [
    "datasets>=2.19,<3",
    "ftfy>=6.1,<7",
    "numpy>=1.24,<2.4",
    "pillow>=9,<12",
    "scikit-learn>=1.2,<1.6",
    "tiktoken>=0.5,<0.8",
    "torch>=2.1,<2.3",
    "torchvision>=0.16,<0.18",
    "tqdm>=4.65,<5",
    "transformers>=5,<6",
] }
docs = [
    "mkdocs-material>=9.0",
    "pymdown-extensions>=10.0",
]
turpan = { optional = true, dependencies =[
    "datasets>=2.19,<3",
    "ftfy>=6.1,<7",
    "numpy>=1.24,<2.4",
    "pillow>=9,<12",
    "tiktoken>=0.5,<0.8",
    "tqdm>=4.65,<5",
    "transformers>=4.38,<5",
]}
